# paper-rank

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Rocket.toml  docker-compose.yml  schema.sql  todos.md
.github/workflows/: docker.yml  rust.yml
db/: .gitignore
src/: auth.rs  context.rs  lib.rs  mail.rs  main.rs  markdown.rs  schema.rs
src/db/: item.rs  mod.rs  user.rs  vote.rs
templates/: 404.html.tera  base.html.tera  history.html.tera  index.html.tera  item.html.tera  login.html.tera  mail.html.tera  new.html.tera  new_item.html.tera  show.html.tera  user.html.tera  vote.html.tera
