[package]
name = "voters"
version = "0.0.1"
publish = false
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
diesel = { version = "1.4.7", features = ["sqlite", "r2d2", "chrono"] }
serde = "1.0.126"
itertools = "0.10"
rcir = "0.3"
comrak = "0.10"
pbkdf2 = "0.8"
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_sqlite_pool"]
