[package]
name = "prank"
version = "0.0.1"
publish = false
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
diesel = { version = "2.1.4", default-features = false, features = ["sqlite", "r2d2", "chrono"] }
serde = "1.0.197"
itertools = "0.10"
rcir = "0.3"
comrak = "0.10"
pbkdf2 = "0.8"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
chrono = { version = "0.4.35", features = ["serde"] }
structopt = "0.3.26"
futures = "0.3.30"
anyhow = "1.0.80"
lettre = { version = "0.11.4", features = ["smtp-transport", "builder"] }
rpassword = "5.0.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]

[[bin]]
name = "prank-server"

[[bin]]
name = "prankctl"
